--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 
 
 
-<base href="https://localhost:1313/">
+<base href="https://wahrli.ch/">
 
 
 <!-- theme meta -->
@@ -45,7 +45,7 @@
 <!-- Open Graph image and Twitter Card metadata -->
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Gene Wahrlich&#39;s Blog"/>
-<meta property="og:url" content="https://localhost:1313/404.html">
+<meta property="og:url" content="https://wahrli.ch/404.html">
   <meta property="og:site_name" content="Gene Wahrlich">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Gene Wahrlich&#39;s Blog">
@@ -75,8 +75,8 @@
         }
       </script>
 	
-<link rel="shortcut icon" href="https://localhost:1313/images/favicon.png" type="image/x-icon">
-<link rel="icon" href="https://localhost:1313/images/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="https://wahrli.ch/images/favicon.png" type="image/x-icon">
+<link rel="icon" href="https://wahrli.ch/images/favicon.png" type="image/x-icon">
 
 
 <meta http-equiv="x-dns-prefetch-control" content="on">
@@ -169,7 +169,7 @@
         
         <img loading="lazy" decoding="async" src="/images/404_hu4151654109672642359.webp" alt="404" class="img-fluid mb-4" width="500" height="350">
         <h1 class="mb-4">Page Not Found!</h1>
-        <a href="https://localhost:1313/" class="btn btn-outline-primary">Back To Home</a>
+        <a href="https://wahrli.ch/" class="btn btn-outline-primary">Back To Home</a>
       </div>
     </div>
   </div>
