--- a/elements/index.html
+++ b/elements/index.html
@@ -9,7 +9,7 @@
 
 
 
-<base href="https://localhost:1313/">
+<base href="https://wahrli.ch/">
 
 
 <!-- theme meta -->
@@ -45,7 +45,7 @@
 <!-- Open Graph image and Twitter Card metadata -->
 <meta name="twitter:title" content="Elements"/>
 <meta name="twitter:description" content="this is meta description"/>
-<meta property="og:url" content="https://localhost:1313/elements/">
+<meta property="og:url" content="https://wahrli.ch/elements/">
   <meta property="og:site_name" content="Gene Wahrlich">
   <meta property="og:title" content="Elements">
   <meta property="og:description" content="this is meta description">
@@ -75,8 +75,8 @@
         }
       </script>
 	
-<link rel="shortcut icon" href="https://localhost:1313/images/favicon.png" type="image/x-icon">
-<link rel="icon" href="https://localhost:1313/images/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="https://wahrli.ch/images/favicon.png" type="image/x-icon">
+<link rel="icon" href="https://wahrli.ch/images/favicon.png" type="image/x-icon">
 
 
 <meta http-equiv="x-dns-prefetch-control" content="on">
@@ -175,7 +175,7 @@
   
   
   
-  <span class="mx-1">/</span> <a href="https://localhost:1313/elements">Elements</a>
+  <span class="mx-1">/</span> <a href="https://wahrli.ch/elements">Elements</a>
   
   
   
