--- a/404.html
+++ b/404.html
@@ -3,13 +3,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 	<meta charset="utf-8">
 <title>404 Page not found</title>
 
 
-
-<base href="https://wahrli.ch/">
 
 
 <!-- theme meta -->
@@ -45,7 +43,7 @@
 <!-- Open Graph image and Twitter Card metadata -->
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Gene Wahrlich&#39;s Blog"/>
-<meta property="og:url" content="https://wahrli.ch/404.html">
+<meta property="og:url" content="http://localhost:1313/404.html">
   <meta property="og:site_name" content="Gene Wahrlich">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Gene Wahrlich&#39;s Blog">
@@ -75,8 +73,8 @@
         }
       </script>
 	
-<link rel="shortcut icon" href="https://wahrli.ch/images/favicon.png" type="image/x-icon">
-<link rel="icon" href="https://wahrli.ch/images/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="http://localhost:1313/images/favicon.png" type="image/x-icon">
+<link rel="icon" href="http://localhost:1313/images/favicon.png" type="image/x-icon">
 
 
 <meta http-equiv="x-dns-prefetch-control" content="on">
@@ -173,7 +171,7 @@
         
         <img loading="lazy" decoding="async" src="/images/404_hu4151654109672642359.webp" alt="404" class="img-fluid mb-4" width="500" height="350">
         <h1 class="mb-4">Page Not Found!</h1>
-        <a href="https://wahrli.ch/" class="btn btn-outline-primary">Back To Home</a>
+        <a href="http://localhost:1313/" class="btn btn-outline-primary">Back To Home</a>
       </div>
     </div>
   </div>
